Initialised login screen

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -61,7 +61,7 @@
         android:layout_marginRight="24dp"
         android:background="@color/colorPrimary"
         android:onClick="switchToLoginActivity"
-        android:text="@string/login_button"
+        android:text="@string/action_sign_in_short"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
