--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#a31314</color>
     <color name="colorPrimaryDark">#780d0d</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#13a3a2</color>
 </resources>
