Register button to maps activity

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -77,6 +77,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:background="@color/colorPrimary"
+        android:onClick="switchToRegisterActivity"
         android:text="@string/register_button"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
