--- a/app/src/main/res/layout/activity_bike_info.xml
+++ b/app/src/main/res/layout/activity_bike_info.xml
@@ -108,7 +108,7 @@
         app:layout_constraintTop_toBottomOf="@+id/city" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/rentButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
