--- a/app/src/main/res/layout/activity_end_contract.xml
+++ b/app/src/main/res/layout/activity_end_contract.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".EndContractActivity">
 
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="170dp"
+        android:text="@string/end_contract_info"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
