--- a/app/src/main/res/layout/activity_bike_info.xml
+++ b/app/src/main/res/layout/activity_bike_info.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/logoklein" />
 
     <TextView
         android:id="@+id/textView4"
